objects/Agreement_Version__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agreement Type</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Agreement Type and Agreement Version must be of the same State.</errorMessage>
            <filterItems>
                <field>$Source.State__c</field>
                <operation>equals</operation>
                <valueField>Agreement_Type__c.State__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agreement_Type__c</referenceTo>
        <relationshipLabel>Agreement Versions</relationshipLabel>
        <relationshipName>Agreement_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <label>Agreement Version</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Type__c</columns>
        <columns>State__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agreement Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>